# PufferDrive

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  asteroids  drive  pyproject.toml  ruff.toml  setup.cfg  setup.py  test.ipynb
.github/workflows/: _cleanup.yml  install.yml  render-ci.yml  train-ci.yml
artifacts/: drive_model_diagram.txt
artifacts/awdx7bp2:v0/: puffer_drive_awdx7bp2.pt
artifacts/jpcztjds:v0/: puffer_drive_jpcztjds.pt
artifacts/ncfng3on:v0/: puffer_drive_ncfng3on.pt
artifacts/ou8acy9y:v0/: puffer_drive_ou8acy9y.pt
artifacts/vxn8memw:v0/: puffer_drive_vxn8memw.pt
artifacts/wbt95gym:v0/: puffer_drive_wbt95gym.pt
artifacts/y08z6wc6:v0/: puffer_drive_y08z6wc6.pt
data_utils/carla/: carla_data_utils.py  process_carla_roads.py  process_carla_xodr.py  roads_analysis.ipynb
data_utils/carla/carla/: Town01_0.json
examples/: gym_env.py  gymnasium_env.py  pettingzoo_env.py  puffer_env.py  pufferl.py  render.py  structured_env.py  vectorization.py
pufferlib/: __init__.py  clean_pufferl.py  cleanrl_ppo_atari.py  emulation.py  models.py  pufferl.py  pufferlib.py  pytorch.py  spaces.py  sweep.py  vector.py  viz.py
pufferlib/config/: default.ini  drone.ini  mani_skill.ini  metta.ini  mujoco.ini
pufferlib/config/ocean/: asteroids.ini  battle.ini  boids.ini  breakout.ini  checkers.ini  connect4.ini  convert.ini  convert_circle.ini  drive.ini  drone.ini  drone_race.ini  drone_sphere.ini  drone_swarm.ini  enduro.ini  freeway.ini  g2048.ini  go.ini  gpudrive.ini  grid.ini  impulse_wars.ini  matsci.ini  memory.ini  moba.ini  nmmo3.ini  pacman.ini  pong.ini  pysquared.ini  rware.ini  school.ini  snake.ini  target.ini  template.ini  terraform.ini  tetris.ini  tower_climb.ini  trash_pickup.ini  tripletriad.ini  whisker_racer.ini
pufferlib/environments/mani_skill/: environment.py  torch.py
pufferlib/environments/metta/: environment.py  metta.yaml  torch.py
pufferlib/environments/mujoco/: environment.py  torch.py
pufferlib/extensions/: puffernet.h  puffernet.pyx
pufferlib/extensions/cuda/: pufferlib.cu
pufferlib/ocean/: __init__.py  env_binding.h  environment.py  render.py  sanity.py  torch.py
pufferlib/ocean/asteroids/: asteroids.c  asteroids.h  asteroids.py  binding.c
pufferlib/ocean/battle/: battle.c  battle.h  battle.py  binding.c
pufferlib/ocean/blastar/: blastar.c  blastar.h
pufferlib/ocean/boids/: binding.c  boids.c  boids.h  boids.py
pufferlib/ocean/breakout/: breakout.c  breakout.h
pufferlib/ocean/cartpole/: cartpole.c  cartpole.py
pufferlib/ocean/checkers/: binding.c  checkers.c  checkers.h  checkers.py
pufferlib/ocean/connect4/: connect4.c  connect4.h  connect4.py
pufferlib/ocean/convert/: binding.c  convert.c  convert.h  convert.py
pufferlib/ocean/convert_circle/: binding.c  convert_circle.c  convert_circle.h  convert_circle.py
pufferlib/ocean/cpr/: binding.c  cpr.c  cpr.h
pufferlib/ocean/drive/: README.md  binding.c  drive.c  drive.h  drive.py  drivenet.h  error.h  visualize.c
pufferlib/ocean/drone/: binding.c  drone.c  drone.h  drone.py
pufferlib/ocean/drone_race/: binding.c  drone_race.c  drone_race.h  drone_race.py  dronelib.h
pufferlib/ocean/drone_sphere/: binding.c  drone_sphere.c  drone_sphere.h  drone_sphere.py
pufferlib/ocean/drone_swarm/: binding.c  drone_swarm.c  drone_swarm.h  drone_swarm.py  dronelib.h
pufferlib/ocean/enduro/: enduro.c
pufferlib/ocean/freeway/: binding.c  freeway.c  freeway.h  freeway.py  freeway_levels.h
pufferlib/ocean/g2048/: 2048.c  2048.h  binding.c  g2048.c  g2048.py
pufferlib/ocean/go/: go.c  go.h
pufferlib/ocean/gpudrive/: binding.c  gpudrive.c  gpudrive.h  gpudrive.py
pufferlib/ocean/grid/: binding.c  grid.h  grid.py
pufferlib/ocean/impulse_wars/: CMakeLists.txt  Makefile  README.md  benchmark.c  binding.c  env.h  game.h  helpers.h  impulse_wars.c  impulse_wars.py  map.h  my_binding.c  pyproject.toml  render.h  scripted_agent.h  settings.h  types.h
pufferlib/ocean/impulse_wars/src/: demo.c  env.h  game.h  helpers.h  map.h  render.h  scripted_agent.h  settings.h  types.h
pufferlib/ocean/matsci/: binding.c  matsci.c  matsci.h  matsci.py
pufferlib/ocean/memory/: binding.c  memory.c  memory.h  memory.py
pufferlib/ocean/moba/: binding.c  moba.py
pufferlib/ocean/nmmo3/: nmmo3.c  nmmo3.py
pufferlib/ocean/pacman/: binding.c  helpers.h  pacman.c  pacman.h  pacman.py
pufferlib/ocean/pong/: pong.c  pong.h
pufferlib/ocean/pysquared/: pysquared.py
pufferlib/ocean/rware/: binding.c  rware.c  rware.h  rware.py
pufferlib/ocean/school/: binding.c  school.c  school.h  school.py
pufferlib/ocean/snake/: snake.c
pufferlib/ocean/squared/: squared.c  squared.h  squared.py
pufferlib/ocean/template/: binding.c  template.c  template.h  template.py
pufferlib/ocean/terraform/: binding.c  terraform.c  terraform.h  terraform.py
pufferlib/ocean/tetris/: binding.c  tetris.c  tetris.h  tetris.py  tetrominoes.h
pufferlib/ocean/tower_climb/: binding.c  tower_climb.c  tower_climb.h  tower_climb.py
pufferlib/ocean/trash_pickup/: binding.c  trash_pickup.c  trash_pickup.h
pufferlib/resources/battle/: base.glb  (+3 more)
scripts/: build_ocean.sh  build_simple.sh  train_ocean.sh  train_sanity.sh
tests/: mem_test.py  test.py  test_api.py  test_atari_reset.py  test_c_advantage.cu  test_carbs.py  test_cleanrl_utils.py  test_drive_render.py  test_drive_scenario_length.py  test_drive_train.py  test_env_binding.py  test_extensions.py  test_flatten.py  test_import_performance.py  test_namespace.py  test_nested.py  test_newbind.py  test_nmmo3_compile.py  test_performance.py  test_pokemon_red.py  test_policy_pool.py  test_puffernet.py  test_pytorch.py  test_record_array.py  test_record_emulation.py  test_registry.sh  test_render.py  test_rich.py  test_sweep.py  test_utils.py  time_alloc.py
tests/drive/: Makefile  test_error.c
tests/pool/: plot_packing.py  test_basic_multprocessing.py  test_envpool.py  test_multiprocessing.py
(+23 files in other folders)
